[package]
name = "rog"
version = "0.1.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"
description = "A Rust logger"
license = "WTFPL"
homepage = "https://github.com/mohanson/rog"
documentation = "https://github.com/mohanson/rog/blob/master/README.md"

[dependencies]
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
