[package]
name = "rog"
version = "0.1.3"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"
description = "A Rust logger"
license = "WTFPL"
homepage = "https://github.com/rsdump/rog"
documentation = "https://github.com/rsdump/rog/blob/master/README.md"

[dependencies]
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
